# kebogyro

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  OUTLINES_IMPLEMENTATION_SUMMARY.md  README.md  debug_curly_braces.py  debug_streaming_issue.py  debug_tool_call_json.py  debug_truncation.py  mkdocs.yaml  pyproject.toml  requirements.txt  run_webui.py  test_filter.py
.github/workflow/: python-app.yml
.github/workflows/: python-app.yml
docs/: agent_executor.md  caching.md  getting_started.md  index.md  llm_wrapper.md  mcp_client.md  overview.md  providers.md  tools.md  troubleshooting.md
src/kebogyro/: agent_executor.py  cache.py  config.py  messages.py  wrapper.py
src/kebogyro/mcp_adapter/: client.py  prompts.py  resources.py  sessions.py  tools.py  utils.py
tests/: test_agent_executor.py  test_mcp_client.py  test_tool_call_filtering.py  test_tools.py  test_wrapper.py
tests/web_ui/: test_config.py  test_content_buffer.py  test_core_logic.py  test_core_logic_utils.py  test_error_handler.py  test_ollama_adapter.py  test_outlines_integration.py  test_outlines_validator.py  test_session_manager.py  test_session_manager_non_ollama.py
web_ui/: __init__.py  app.py  config.py  core_logic.py  core_logic_old.py  error_handler.py  ollama_adapter.py  outlines_models.py  outlines_validator.py  session_manager.py  tools.py  ui_components.py
