[project]
name = "kebogyro"
version = "0.1.1"
description = "An Async-first tool calling & LLM client orchestration. OpenAI-compatible, cacheable, framework-agnostic."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Lantip", email = "lantip@gmail.com" }
]
keywords = ["llm", "mcp", "openai", "tool-calling", "async", "orchestration"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "aiohttp>=3.9.0",
    "async_timeout>=4.0.3",
    "httpx>=0.27.0",
    "openai>=1.14.0",
    "pydantic>=2.7.0",
    "mcp>=1.4.1",
    "streamlit>=1.30.0", # Web UI framework
    "pandas>=1.5.0", # Required for timing charts in debug UI
    "python-dotenv>=1.0.0",  # Added for .env file support
    "outlines>=0.0.46",  # Structured LLM output generation
    "ollama>=0.1.0"  # Required for Outlines Ollama integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
    "flake8>=6.0.0"
]

[tool.fastmcp]
tools = ["kebogyro"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
